Update styles a bit, less spacing after li. Fix some formatting.

--- a/html/css/_main.scss
+++ b/html/css/_main.scss
@@ -92,7 +92,7 @@ ul {
 }
 
 li {
-    margin-bottom: 0.4em;
+    margin-bottom: 0em;
 }
 
 blockquote {
