--- a/html/css/sakura-zef.css
+++ b/html/css/sakura-zef.css
@@ -97,7 +97,7 @@ ul {
 }
 
 li {
-  margin-bottom: 0.4em;
+  margin-bottom: 0em;
 }
 
 blockquote {
